got super simple three.js canvas to render

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "prop-types": "latest",
     "react": "latest",
     "react-dom": "latest",
-    "react-jss": "^8.1.0"
+    "react-jss": "^8.1.0",
+    "three": "^0.104.0",
+    "three-react-fiber": "latest"
   },
   "scripts": {
     "dev": "next",
